@@ -1,3 +1,7 @@
+2002-06-04  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (Init): convert env(home) from 'C:' to 'C:/' if necessary.
+
 2002-06-03  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: fixed Retrieve to use the proxy info (Thoyts).
